examples/ngf-gw-cilium-gamma/ngf-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-ingress-ngf
spec:
  gatewayClassName: nginx
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: api-dev.kind-test.foo.network
      name: http
      port: 80
      protocol: HTTP
