examples/ngf-gw-cilium-gamma/cilium-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gamma
  namespace: default
spec:
  parentRefs:
    - group: ""
      name: parent-service
      kind: Service
      port: 80
  rules:
    - backendRefs:
        - name: stable-service
          group: ""
          port: 80
          kind: Service
        - name: canary-service
          group: ""
          port: 80
          kind: Service
